# clasp

./: .gitignore  Implementation.md  README.md  clasp.sln
clasp/: 404.clasp  Clasp.cs  ClaspUtility.cs  CliUtility.cs  IndentedTextWriter.cs  Program.cs  README.md  clasp.csproj  demo.clasp  json.clasp  page.clasp  static.clasp
clasp/Properties/: launchSettings.json
clasptree/: IndentedTextWriter.cs  Program.cs  README.md  clasptree.csproj  httpd_epilogue.h  httpd_map.map  runner.c  runner_ranges.c
clasptree/Properties/: launchSettings.json
clasptree/www/: .404.clasp  .500.clasp  .fs_api.clasp  S01E01 Pilot.clasp  httpd_root_api.h  index.clasp
clstat/: CLStat.cs  Program.cs  README.md  clstat.csproj
clstat/Properties/: launchSettings.json
esp32_www/: CMakeLists.txt  README.md  platformio.ini  sdkconfig.example-m5stack-core2-esp-idf
esp32_www/data/: wifi.txt
esp32_www/include/: httpd_content.h  www_content.h
esp32_www/src/: main.cpp
posix_www/: CMakeLists.txt  README.md
posix_www/include/: httpd_application.h  httpd_content.h
posix_www/src/: main.cpp
py/: visualfa.py
win32_www/: CMakeLists.txt  README.md
win32_www/include/: httpd_application.h  httpd_content.h
win32_www/src/: main.cpp
